<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="false"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etNombreUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nombre"
        android:textSize="@dimen/tam_textos"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etMailUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/mail"
        android:textSize="@dimen/tam_textos"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edClaveUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/passwd"
        android:textSize="@dimen/tam_textos"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edClaveUsuario2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/rep_passwd"
        android:textSize="@dimen/tam_textos"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/tvTipoTarjeta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/tipo_tarjeta"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="ExtraText">

        <RadioButton
            android:id="@+id/radioTarjDebito"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/debito" />

        <RadioButton
            android:id="@+id/radioTarjCredito"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/credito" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etNumeroTarj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="20"
            android:hint="@string/tarjeta"
            android:textSize="@dimen/tam_textos"
            android:inputType="number"
            android:maxLength="18" />

        <EditText
            android:id="@+id/etNumeroCCV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/ccv"
            android:textSize="@dimen/tam_textos"
            android:inputType="number"
            android:maxLength="3" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etNumeroMes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:ems="10"
            android:hint="@string/mes"
            android:textSize="@dimen/tam_textos"
            android:inputType="number"
            android:maxLength="2" />

        <EditText
            android:id="@+id/etNumeroAnio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:ems="10"
            android:hint="@string/anio"
            android:textSize="@dimen/tam_textos"
            android:inputType="number"
            android:maxLength="2" />
    </LinearLayout>

    <EditText
        android:id="@+id/etCBU"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/cbu"
        android:textSize="@dimen/tam_textos"
        android:inputType="number"
        android:maxLength="22"/>

    <EditText
        android:id="@+id/etAlias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/alias"
        android:textSize="@dimen/tam_textos"
        android:inputType="text"
        android:maxLength="20" />

    <Switch
        android:id="@+id/swHabilitaCarga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/carga"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <SeekBar
        android:id="@+id/seekBarDineroInicial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:max="1500"/>

    <CheckBox
        android:id="@+id/checkBoxTerminos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/term_cond"
        android:textSize="@dimen/tam_textos" />

    <Button
        android:id="@+id/buttonRegistrar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/registrar"
        android:textSize="@dimen/tam_textos"
        android:enabled="false"/>

</LinearLayout>